tests/valid/functions.f
PROGRAM FUNCTEST
INTEGER RESULT
RESULT = DOBRO(5)
PRINT *, 'Dobro: ', RESULT
END
INTEGER FUNCTION DOBRO(N)
INTEGER N, VAL
VAL = N * 2
DOBRO = VAL
RETURN
END
