tests/invalid_semantic/bad_args.f
PROGRAM BADARGS
INTEGER RESULT
RESULT = DOBRO(5, 10)
END
INTEGER FUNCTION DOBRO(N)
INTEGER N
DOBRO = N * 2
RETURN
END
